style.css
#cat-box {
    display: block;
    padding: 16px 0 0 32px;
    width: 400px;
    float: left;
}
#cat-menu {
    display: block;
    width: 240px;
    float: left;
    margin-top: 24px;
}
#cat-name {
    font-size: 32px;
    font-weight: bold;
    float: left;
    padding-right: 12px;
    font-family: 'Comfortaa', cursive;
}
#clicks-text {
    font-size: 20px;
    font-family: 'Comfortaa', cursive;
    ont-weight: 300;
    margin-top: 10px;
    color: #666;
}
#cat-photo {
    height: 250px;
    border: 8px solid #fff;
    margin-top: 6px;
}
.cat-photo {
    box-shadow: 2px 2px 8px #ccc;
    transition: all .07s;
}
.photo-click {
    box-shadow: 0px 0px 0px #ccc;
    transition: all .07s;
}
#cat-photo:hover {
    cursor: pointer;
}
#cat-div {
    display: none;
}

li {
    font-size: 18px;
    font-family: 'Comfortaa', cursive;
    padding: 3px;
}
li:hover {
    cursor: pointer;
}
ul {
    list-style: none;
}
li:before {
    content: "";
    border-color: transparent #111;
    border-style: solid;
    border-width: 0.35em 0 0.35em 0.45em;
    display: block;
    height: 0;
    width: 0;
    left: -1em;
    top: 0.9em;
    position: relative;
}

#admin-btn {
    border: none;
    padding: 6px 10px;
    font-size: 14px;
    text-align: center;
    text-decoration: none;
    margin: 20px 32px;
    cursor: pointer;
    float: left;
}

#admin-box {
    width: 230px;
    float: left;
    margin-top: 20px;
    display: none;
}

.save-cancel-btn {
    font-size: 14px;
    text-align: center;
    text-decoration: none;
    cursor: pointer;
    float:right;
    padding: 4px 8px;
    margin: 6px 0 0 6px;
}

.admin-input {
    padding: 4px 0;
    float: right;
}

.admin-input-label {
    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
}

